<resources>
    <string name="app_name">GeoCorpus</string>
    <string name="btnAcesso">Acessar</string>


    <string name="txt_nome">Nome:</string>
    <string name="txt_nome_da_sala">Nome da Sala:</string>
    <string name="txt_senha">Senha:</string>
    <string name="txt_entrar">Entrar</string>
    <string name="txt_criar">Criar</string>
    <string name="txt_acessar">Acessar</string>
    <string name="txt_usuario">Usuários:</string>
    <string name="txt_dicas">Dicas:</string>
    <string name="txt_sintomas">Sintoma(s)</string>
    <string name="txt_resposta">Resposta:</string>
    <string name="txt_modo_offline">Modo Offline</string>
    <string name="modo_interativo">Modo Interativo</string>
    <string name="modo_estudo">Modo Estudo</string>
    <string name="title_activity_fragment_room_playablediviner">fragment_room_playablediviner
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
