<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    tools:context=".room_playable_diviner" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/modo_interativo"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_usuario"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/textDicas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="305dp"
        android:text="Container"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:id="@+id/textDicas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="150dp"
        android:text="@string/txt_dicas"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textSintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_sintomas"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDicas" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:text="Container"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="255dp" />

    <TextView
        android:id="@+id/textResposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_resposta"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="556dp" />

</androidx.constraintlayout.widget.ConstraintLayout>